// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as a homepage 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  --breadcrumb-color: #5C6C75;
}

.dark-theme .emotion-0 {
  --breadcrumb-color: #C1C7C6;
}

.emotion-0 a,
.emotion-0 span {
  color: var(--breadcrumb-color);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 480px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-7 {
    display: none;
  }
}

@media not all and (max-width: 480px) {
  .emotion-7 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 1024px) {
  .emotion-13 {
    display: none;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-13 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/"
          target="_self"
        >
          <span>
            MongoDB Atlas
          </span>
        </a>
      </div>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/"
          target="_self"
        >
          <span>
            MongoDB Atlas
          </span>
        </a>
      </div>
    </div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-14"
      >
        <div
          class="emotion-2"
        >
          <a
            class="lg-ui-0001 emotion-3"
            href="https://www.mongodb.com/docs/"
            target="_self"
          >
            <span>
              Docs Home
            </span>
          </a>
        </div>
        <span
          class="emotion-4"
        >
           / 
        </span>
        <div
          class="emotion-2"
        >
          <a
            class="lg-ui-0001 emotion-3"
            href="https://www.mongodb.com/docs/atlas/"
            target="_self"
          >
            <span>
              MongoDB Atlas
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  --breadcrumb-color: #5C6C75;
}

.dark-theme .emotion-0 {
  --breadcrumb-color: #C1C7C6;
}

.emotion-0 a,
.emotion-0 span {
  color: var(--breadcrumb-color);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 480px) {
  .emotion-1 {
    display: none;
  }
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-5 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-5:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-5:active:before,
.emotion-5:hover:before,
.emotion-5:focus:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-5:focus {
  outline: none;
}

.emotion-5:active,
.emotion-5:hover {
  color: #001E2B;
}

.emotion-5:active:before,
.emotion-5:hover:before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-5:focus-visible {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-5:focus-visible:before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-6 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-8 {
  display: none;
}

.emotion-10 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-10:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-10:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-11>span>code,
.emotion-11>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-11:focus,
.emotion-11:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-11:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-11:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-11:hover,
.emotion-11:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-12 {
    display: none;
  }
}

@media not all and (max-width: 480px) {
  .emotion-12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-12 {
    display: none;
  }
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 1024px) {
  .emotion-26 {
    display: none;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-26 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <button
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Show all breadcrumbs"
        class="emotion-5"
        tabindex="0"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-label="Ellipsis Icon"
            class="emotion-7"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M2.75 6C3.7165 6 4.5 6.7835 4.5 7.75C4.5 8.7165 3.7165 9.5 2.75 9.5C1.7835 9.5 1 8.7165 1 7.75C1 6.7835 1.7835 6 2.75 6ZM7.75 6C8.7165 6 9.5 6.7835 9.5 7.75C9.5 8.7165 8.7165 9.5 7.75 9.5C6.7835 9.5 6 8.7165 6 7.75C6 6.7835 6.7835 6 7.75 6ZM14.5 7.75C14.5 6.7835 13.7165 6 12.75 6C11.7835 6 11 6.7835 11 7.75C11 8.7165 11.7835 9.5 12.75 9.5C13.7165 9.5 14.5 8.7165 14.5 7.75Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
      <span
        class="emotion-8"
      />
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-10"
      >
        <a
          class="emotion-11"
          href="/sdk/cpp/application-services/"
        >
          Application Services - C++ SDK
        </a>
      </div>
    </div>
    <div
      class="emotion-12"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <button
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Show all breadcrumbs"
        class="emotion-5"
        tabindex="0"
      >
        <div
          class="emotion-6"
        >
          <svg
            aria-label="Ellipsis Icon"
            class="emotion-7"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M2.75 6C3.7165 6 4.5 6.7835 4.5 7.75C4.5 8.7165 3.7165 9.5 2.75 9.5C1.7835 9.5 1 8.7165 1 7.75C1 6.7835 1.7835 6 2.75 6ZM7.75 6C8.7165 6 9.5 6.7835 9.5 7.75C9.5 8.7165 8.7165 9.5 7.75 9.5C6.7835 9.5 6 8.7165 6 7.75C6 6.7835 6.7835 6 7.75 6ZM14.5 7.75C14.5 6.7835 13.7165 6 12.75 6C11.7835 6 11 6.7835 11 7.75C11 8.7165 11.7835 9.5 12.75 9.5C13.7165 9.5 14.5 8.7165 14.5 7.75Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
      <span
        class="emotion-8"
      />
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-10"
      >
        <a
          class="emotion-11"
          href="/sdk/cpp/"
        >
          Atlas Device SDK for C++
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-10"
      >
        <a
          class="emotion-11"
          href="/sdk/cpp/application-services/"
        >
          Application Services - C++ SDK
        </a>
      </div>
    </div>
    <div
      class="emotion-26"
    >
      <div
        class="emotion-27"
      >
        <div
          class="emotion-2"
        >
          <a
            class="lg-ui-0001 emotion-3"
            href="https://www.mongodb.com/docs/"
            target="_self"
          >
            <span>
              Docs Home
            </span>
          </a>
        </div>
        <span
          class="emotion-4"
        >
           / 
        </span>
        <div
          class="emotion-2"
        >
          <a
            class="lg-ui-0001 emotion-3"
            href="https://www.mongodb.com/docs/atlas/"
            target="_self"
          >
            <span>
              MongoDB Atlas
            </span>
          </a>
        </div>
        <span
          class="emotion-4"
        >
           / 
        </span>
        <div
          class="emotion-2"
        >
          <a
            class="emotion-11"
            href="/"
          >
            Atlas Device SDKs
          </a>
        </div>
        <span
          class="emotion-4"
        >
           / 
        </span>
        <div
          class="emotion-10"
        >
          <a
            class="emotion-11"
            href="/sdk/cpp/"
          >
            Atlas Device SDK for C++
          </a>
        </div>
        <span
          class="emotion-4"
        >
           / 
        </span>
        <div
          class="emotion-10"
        >
          <a
            class="emotion-11"
            href="/sdk/cpp/application-services/"
          >
            Application Services - C++ SDK
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
